<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtTitreReservation"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IdReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtChoixArtiste"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnConfirmerResa"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txtBtnConfirmer"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toStartOf="@+id/btnAnnulerResa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdReservation" />

    <Button
        android:id="@+id/btnAnnulerResa"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnAnnuler"
        android:textColor="#263238"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmerResa"
        app:layout_constraintTop_toBottomOf="@+id/IdReservation" />

    <Button
        android:id="@+id/btnRetourReservation"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginTop="208dp"
        android:text="@string/txtBtnRetour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmerResa" />
</androidx.constraintlayout.widget.ConstraintLayout>