<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recherche">

    <TextView
        android:id="@+id/txtRecherche"
        android:layout_width="235dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/txtRecherche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTitreRecherche" />

    <EditText
        android:id="@+id/edtRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/txtEditRecherche"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btnRecherche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecherche"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="67dp"
        android:text="@string/txtBtnCherche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtRecherche"
        app:layout_constraintTop_toBottomOf="@+id/txtRecherche" />

    <TextView
        android:id="@+id/idTitreRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="120dp"
        android:text="@string/txtTitreRecherche"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edtRecherche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnRetourRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginBottom="69dp"
        android:text="@string/txtBtnRetour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecherche" />

</androidx.constraintlayout.widget.ConstraintLayout>