<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        android:text="@string/txtTitre"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRap"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="21dp"
        android:background="#AFAEB3"
        android:text="@string/txtBtnRap"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#A8A5A5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnElectro"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="21dp"
        android:background="#AFAEB3"
        android:text="@string/txtBtnElectro"
        android:textColor="#4C69D1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#A8A5A5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnRap" />

    <Button
        android:id="@+id/btnHumour"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="21dp"
        android:background="#AFAEB3"
        android:text="@string/txtBtnHumour"
        android:textColor="#127A15"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#A8A5A5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnElectro" />

</androidx.constraintlayout.widget.ConstraintLayout>